# PIMeval-PIMbench

./: .gitignore  .gitmodules  DDR4_8Gb_x16_3200.ini  LICENSE  Makefile  Makefile.common  README.md  ae.sh  app_launcher.py  build_run.sh  slurm.sh
PIMbench/: Makefile  Makefile.common  util.h  utilML.h
apps/: Makefile  Makefile.common  util.h  utilFixedPoint.h
bit-serial/: Makefile  Makefile.common  README.md  bitSerialBase.cpp  bitSerialBase.h  bitSerialBitsimd.cpp  bitSerialBitsimd.h  bitSerialBitsimdAp.cpp  bitSerialBitsimdAp.h  bitSerialMain.cpp  bitSerialMain.h  bitSerialSimdram.cpp  bitSerialSimdram.h  parseResults.py
configs/: DDR4_8Gb_x16_3200.ini  PIMeval_BitSimdV.cfg
cpp-convolution-batch/: conv-batch.out
cpp-dot-prod/: Makefile  dot-prod.out
cpp-gemm-alt/: Makefile  gemm.cpp  gemm.out
cpp-gemv-alt/: gemv.out
cpp-pooling-batch/: pool-batch.cpp  pool-batch.out
cpp-prefix-sum/: Makefile  prefix-sum.cpp  slurm.sh
cpp-relu-batch/: Makefile  relu_batch.out
cpp-sad/: sad.out
cpp-transitive-closure/: README.md
cpp-vec-add-fp32/: vec-add-fp32.cpp  vec-add-fp32.out
cpp-vec-arithmetic/: vec-arithmetic.out
cpp-vec-comp/: vec-comparator.out
cpp-vec-div/: Makefile  vec-div.cpp  vec-div.out
cpp-vec-logical/: vec-logical.out
cpp-vec-mul/: vec-mul.cpp  vec-mul.out
cpp-vec-mul-fp32/: Makefile  vec-mul-fp32.out
cpp-vec-popcnt/: popcount.out
cpp-vec-reduction/: Makefile  (+2 more)
misc-bench/cpp-string-match/baselines/CPU-hs/src/: CMakeLists.txt  string-match.cpp
misc-bench/string-match/baselines/CPU/src/: CMakeLists.txt  string-match.cpp
(+1083 files in other folders)
